Finish all html and css.

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
 
 
-
+    <div class="container">
 
     <div class="column">
-
 
       <div class="large">
         <div class="tunasteak">
@@ -107,15 +106,47 @@
       <div class="small">
         <img src="resources/img-news-bite.png"/>
         <div class="bites">
-          <h3>NEWS BITES</h3>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising
-            Ideas Advertising Internet Online Illustration in Marketing
-            Materials Finally a Top Secret Way You Can</p>
+          <h3>NEWS BITES</div>
+          <div class="news">Cat Emoji Goes Viral</div>
+          <div class="news">Buy Youtube Views</div>
+          <div class="news">Home Business Advertising Ideas</div>
+          <div class="news">Advertising Internet Online</div>
+          <div class="news">Illustration in Marketing Materials</div>
+          <div class="news">Finally a Top Secret Way You Can</div>
         </div>
       </div>
     </div>
 
+    </div>
 
+
+
+    <div class="footer">
+
+      <div class="FooterNav">
+        <p>My Times  |</p>
+
+        <div class="nav">
+          <a href="#">World</a>
+        </div>
+        <div class="nav">
+          <a href="#">U.S.</a>
+        </div>
+        <div class="nav">
+          <a href="#">Tech</a>
+        </div>
+        <div class="nav">
+          <a href="#">Science</a>
+        </div>
+
+      </div>
+
+      <div class="copyright">
+        <p>&copy; 2016, My Times (A Division of Codecademy bite)
+      </div>
+
+
+    </div>
 
   </body>
 </html>
